--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "run-p 'build:*'",
     "build:typescript": "rm -rf types && tsc",
     "test": "run-p --aggregate-output test:eslint test:typescript test:mocha-parallel",
-    "test:mocha": "mocha --no-timeouts --exit 'test/unit/*.test.js' 'test/integ/*.test.js'",
+    "test:mocha": "mocha --no-timeouts --exit 'test/integ/*.test.js'",
     "test:mocha-parallel": "npm run test:mocha -- --parallel",
     "test:eslint": "eslint  --max-warnings=0 '**/*.js'",
     "test:typescript": "tsc --noEmit --emitDeclarationOnly false"
@@ -36,15 +36,17 @@
     "directory": "packages/roundforest-exercise-microservice",
     "type": "git"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.7",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/plugin-syntax-top-level-await": "^7.12.1",
+    "@seasquared/docker-compose-testkit": "^1.0.0",
+    "@seasquared/mocha-commons": "^1.0.3",
     "@types/chai": "^4.2.14",
     "@types/chai-subset": "^1.3.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.9",
+    "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
     "eslint": "^7.14.0",
@@ -52,6 +54,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.2.1",
+    "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2"
