--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "@seasquared/roundforest-exercise-microservice",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "exports": "./src/roundforest-exercise-microservice.js",
   "main": "./src/roundforest-exercise-microservice.js",
   "types": "./types/src/roundforest-exercise-microservice.d.ts",
   "engines": {
@@ -13,17 +11,14 @@
     "src",
     "types"
   ],
+  "private": true,
   "publishConfig": {
     "access": "restricted"
   },
   "scripts": {
-    "build": "run-p 'build:*'",
-    "build:typescript": "rm -rf types && tsc",
-    "test": "run-p --aggregate-output test:eslint test:typescript test:mocha-parallel",
+    "test": "run-s test:eslint test:mocha",
     "test:mocha": "mocha --no-timeouts --exit 'test/integ/*.test.js'",
-    "test:mocha-parallel": "npm run test:mocha -- --parallel",
-    "test:eslint": "eslint  --max-warnings=0 '**/*.js'",
-    "test:typescript": "tsc --noEmit --emitDeclarationOnly false"
+    "test:eslint": "eslint  --max-warnings=0 '**/*.js'"
   },
   "keywords": [
     "javascript",
@@ -32,21 +27,11 @@
   "author": "Gil Tayar <giltayar@roundforest.com>",
   "license": "MIT",
   "repository": {
-    "url": "https://github.com/roundforest/mono",
-    "directory": "packages/roundforest-exercise-microservice",
+    "url": "https://github.com/giltayar/roundforest-exercise-microservice",
     "type": "git"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/plugin-syntax-top-level-await": "^7.12.1",
-    "@seasquared/docker-compose-testkit": "^1.0.0",
-    "@seasquared/mocha-commons": "^1.0.3",
-    "@types/chai": "^4.2.14",
-    "@types/chai-subset": "^1.3.3",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.9",
-    "@types/node-fetch": "^2.5.7",
+    "@bilt/scripting-commons": "^1.2.5",
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
     "eslint": "^7.14.0",
@@ -56,7 +41,11 @@
     "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2"
+    "p-retry": "^4.2.0",
+    "prettier": "^2.2.0"
+  },
+  "dependencies": {
+    "fastify": "^3.8.0",
+    "pg": "^8.5.1"
   }
 }
